--- a/content/neural_network_in_python.pdf.html
+++ b/content/neural_network_in_python.pdf.html
@@ -468,13 +468,14 @@ print (result)
             <script src="../cmsimde/static/chimper/js/main.js"></script>
         
 <!-- 啟用 LaTeX equations 編輯 -->
-<!--<script>
+<script>
   MathJax = {
-    tex: {inlineMath: [['$', '$'], ['\(', '\)']]}
+    tex: {inlineMath : [ ['$','$'], ["\$","\$"] ],
+                   displayMath: [ ['$$','$$'], ["\[","\]"] ],}
   };
   </script>
-  <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>    -->
+  <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>    
    <!-- https://oysz2016.github.io/post/8611e6fb.html -->
-   </script><script type="text/javascript" src="//cdn.bootcss.com/mathjax/2.7.1/latest.js?config=TeX-AMS-MML_HTMLorMML"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-backstretch/2.0.4/jquery.backstretch.min.js"></script>
+   <!--</script><script type="text/javascript" src="//cdn.bootcss.com/mathjax/2.7.1/latest.js?config=TeX-AMS-MML_HTMLorMML"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-backstretch/2.0.4/jquery.backstretch.min.js"></script>-->
     </body></html>
         
