--- a/content/Markov Decision Process.html
+++ b/content/Markov Decision Process.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='專題定位.html'>專題定位</a><li><a href='LaTeX.html'>LaTeX</a><li><a href='參考資料.html'>參考資料</a><li><a href='研究生考試.html'>研究生考試</a></li></ul><li class='has-children'><a href='動態網站.html'>動態網站</a><ul class='dropdown'><li><a href='數位簽章.html'>數位簽章</a><li><a href='機電控制.html'>機電控制</a><li><a href='iRobot Create.html'>iRobot Create</a></li></ul><li class='has-children'><a href='深度學習.html'>深度學習</a><ul class='dropdown'><li><a href='電腦.html'>電腦</a><li><a href='Flask.html'>Flask</a></li></ul><li class='has-children'><a href='強化學習.html'>強化學習</a><ul class='dropdown'><li><a href='2021.html'>2021</a><li><a href='Reference.html'>Reference</a><li class='has-children'><a href='類神經網路學習.html'>類神經網路學習</a><ul class='dropdown'><li><a href='neural_network_in_python.pdf.html'>neural_network_in_python.pdf</a></li></ul><li><a href='參考範例.html'>參考範例</a><li><a href='Markov Decision Process.html'>Markov Decision Process</a></li></ul><li class='has-children'><a href='優化器.html'>優化器</a><ul class='dropdown'><li><a href='Gradient Descent Optimizer.html'>Gradient Descent Optimizer</a><li><a href='Stochastic gradient descent.html'>Stochastic gradient descent</a><li><a href='Gradient descent optimization algorithms.html'>Gradient descent optimization algorithms</a></li></ul><li class='has-children'><a href='程式.html'>程式</a><ul class='dropdown'><li><a href='RL-Pong Game.html'>RL-Pong Game</a></li></ul><li class='has-children'><a href='Ref.html'>Ref</a><ul class='dropdown'><li><a href='Flutter.html'>Flutter</a><li><a href='CMSiMDE.html'>CMSiMDE</a></li>
+                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='專題定位.html'>專題定位</a><li><a href='LaTeX.html'>LaTeX</a><li><a href='參考資料.html'>參考資料</a><li><a href='研究生考試.html'>研究生考試</a></li></ul><li class='has-children'><a href='動態網站.html'>動態網站</a><ul class='dropdown'><li><a href='數位簽章.html'>數位簽章</a><li><a href='機電控制.html'>機電控制</a><li><a href='iRobot Create.html'>iRobot Create</a></li></ul><li class='has-children'><a href='深度學習.html'>深度學習</a><ul class='dropdown'><li><a href='電腦.html'>電腦</a><li><a href='Flask.html'>Flask</a></li></ul><li class='has-children'><a href='強化學習.html'>強化學習</a><ul class='dropdown'><li><a href='2021.html'>2021</a><li><a href='Reference.html'>Reference</a><li class='has-children'><a href='類神經網路學習.html'>類神經網路學習</a><ul class='dropdown'><li><a href='neural_network_in_python.pdf.html'>neural_network_in_python.pdf</a></li></ul><li><a href='參考範例.html'>參考範例</a><li class='has-children'><a href='Markov.html'>Markov</a><ul class='dropdown'><li><a href='Markov Decision Process.html'>Markov Decision Process</a></li></li></ul></ul><li class='has-children'><a href='優化器.html'>優化器</a><ul class='dropdown'><li><a href='Gradient Descent Optimizer.html'>Gradient Descent Optimizer</a><li><a href='Stochastic gradient descent.html'>Stochastic gradient descent</a><li><a href='Gradient descent optimization algorithms.html'>Gradient descent optimization algorithms</a></li></ul><li class='has-children'><a href='程式.html'>程式</a><ul class='dropdown'><li><a href='RL-Pong Game.html'>RL-Pong Game</a></li></ul><li class='has-children'><a href='Ref.html'>Ref</a><ul class='dropdown'><li><a href='Flutter.html'>Flutter</a><li><a href='CMSiMDE.html'>CMSiMDE</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,45 +133,53 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">參考範例 << <a href='參考範例.html'>Previous</a> <a href='優化器.html'>Next</a> >> 優化器<br /><h1>Markov Decision Process</h1>
-<h4>Markov Chain</h4>
-<p>當前決策只會影響下個狀態，當前狀態轉移(action)到其他狀態的機率有所差異。</p>
-<h4>Markov Reward Process</h4>
-<p>action 到指定狀態會獲得獎勵。</p>
-<p>$$R(s_t=s) = \mathbb{E}[r_t|s_t = s]$$</p>
-<p>$$\gamma \in [0, 1]$$</p>
-<p style="text-align: center;"></p>
-<ul style="list-style-type: disc;">
-<li><span>Horizon：<br/>在無限的狀態以有限的狀態表示</span></li>
-<li><span>Return：<br/>越早做出正確決策獎勵越高</span><span></span><span><br/>$$G_t = R_{t+1}+\gamma R_{t+2}+\gamma^2 R_{t+3}+\gamma^3 R_{t+4}+...+\gamma^{T-t-1} R_{T}$$</span><span><br/></span></li>
-<li><span>State value function：<br/>決策價值</span><span><br/>$$V_t(S) = \mathbb{E}[G_t|s_t = s]$$</span><span><br/></span></li>
-</ul>
-<h4><span>Discount Factor (γ)</span></h4>
-<ol>
-<li>越早做出有獎勵的決策，獎勵越高</li>
-<li>做出有價值的決策 $\gamma = 1$，不分決策順序先後</li>
-<li><span>無用的決策C= 0，不會得到獎勵</span><span></span></li>
-</ol>
-<p><span>Bellman equation：描述互動關係狀態</span></p>
-<p><span>$$V(s) = R(s)+\gamma\sum_{s'\in S}P(s'|s)V(s')$$</span></p>
-<p><span>$$R(s):立即獎勵$$</span></p>
-<p><span>$$\gamma\sum_{s'\in S}P(s'|s)V(s')：未來獎勵衰減總和$$<br/></span></p>
-<p style="text-align: left;"><span><span>Anaytic solution ：分析性解法<br/>MRP的分析性解法：</span></span></p>
-<p style="text-align: left;"><span><span>$$V = (1-\gamma P)^{-1}R$$</span></span></p>
-<p style="text-align: left;"><span><span>只適合小的MRP(個數比較少的)，</span></span><span><span>矩陣複雜度為$O(N^3)$，N為狀態個數</span></span></p>
-<p style="text-align: left;"><span><span>計算大型MRP會使用疊代法：</span></span></p>
-<ol>
-<li style="text-align: left;"><span><span>動態規劃(Dynamic programming)</span></span></li>
-<li style="text-align: left;">Mote-Carlo evaluation<br/>以評估採樣的方式<br/>$$g = \sum_{i=t}^{H-1}\gamma^{1-t}r_i$$<br/>$$G_t \leftarrow G_t+g,  i \leftarrow i+1$$<br/>$$V_t(s) \leftarrow \frac{G_t}{N}$$</li>
-<li style="text-align: left;">Temporal-Difference learning</li>
-</ol>
-<h4>Markov Decision Process</h4>
+    <div id="tipue_search_content">Markov << <a href='Markov.html'>Previous</a> <a href='優化器.html'>Next</a> >> 優化器<br /><h1>Markov Decision Process</h1>
 <p>在MRP中加入決策(decision)和動作(action)</p>
 <ul>
 <li>S：state 狀態</li>
 <li>A：action 動作</li>
 <li>P：狀態轉換<br/>$$P(s_{s+1}=s'|s_t=s,a_t=a)$$</li>
-</ul><br />參考範例 << <a href='參考範例.html'>Previous</a> <a href='優化器.html'>Next</a> >> 優化器</div>
+<li>R：獎勵，取決於當前狀態和動作會得到相對應的講勵<br/>$$ R(s_t=s, a_t=a) = \mathbb{E}[r_t|s_t, a_t=a] $$</li>
+<li>D：折扣因子(discount factor)<br/>$$\gamma \in [0,1]$$</li>
+</ul>
+<p>MDP is a tuple：(S, A, P, R, $\gamma$)</p>
+<p>policy (決策)：可以是一個決策行為機率或確定行為</p>
+<p>$$\pi (a|s) = P(a_t=a|s_t=s)$$</p>
+<p>MRP 和 MDP 轉換</p>
+<table style="margin-left: auto; margin-right: auto; width: 477px;">
+<tbody>
+<tr style="height: 42px;">
+<td style="width: 202.667px; text-align: center; height: 42px;">MRP</td>
+<td style="width: 29.3333px; text-align: center; height: 42px;">↔</td>
+<td style="width: 223.333px; text-align: center; height: 42px;">MDP</td>
+</tr>
+<tr style="height: 40px;">
+<td colspan="3" style="width: 467.333px; text-align: center; height: 40px;">$P^{\pi}(s's) = \sum_{a\in A}\pi (a|s)P(s'|s, a)$</td>
+</tr>
+<tr style="height: 43px;">
+<td colspan="3" style="width: 467.333px; text-align: center; height: 43px;">$P^{\pi}(s) = \sum_{a\in A}\pi (a|s)P(s, a)$</td>
+</tr>
+<tr style="height: 98.7292px;">
+<td style="width: 202.667px; text-align: center; height: 98.7292px;"><img caption="false" height="150" src="./../images/MRP.jpg" width="251"/></td>
+<td style="width: 29.3333px; text-align: center; height: 98.7292px;"></td>
+<td style="width: 223.333px; text-align: center; height: 98.7292px;"><img alt="" height="150" src="./../images/MDP.jpg" width="218"/></td>
+</tr>
+</tbody>
+</table>
+<h4>state value function(狀態值方程式) $v^{\pi}(s)$</h4>
+<p>$$v^{\pi}(s) = \mathbb{E}[G_t|s_t=s]$$</p>
+<p>$$= \mathbb{E}[R_{t+1}+\gamma v^{\pi}(s_{t+1})|s_t=s]$$</p>
+<p>$$= \sum_{a\in A}\pi (a|s)q^{\pi}(s, a)$$</p>
+<p style="text-align: center;"><img alt="" height="200" src="./../images/s_to _s.jpg" width="315"/></p>
+<p style="text-align: left;"><span>$$v^{\pi}(s) = \sum_{a\in A}\pi (a|s)(R(s, a)+\gamma \sum_{s'\in s}P(s'|s, a)v^{\pi}(s'))$$</span></p>
+<h4>action value function(行為方程式)$q^{\pi}(s, a)$</h4>
+<p>$$q^{\pi}(s, a) = \mathbb{E}[G_t|s_t=s, A_t=a]$$</p>
+<p>$$= \mathbb{E}[R_{t+1}+\gamma q^{\pi}(s_{t+1}, A_{t+1})|s_t=s, A_t=a]$$</p>
+<p>$$= R^a_s+\gamma \sum_{s'\in s}P(s'|s)v^{\pi}(s')$$</p>
+<p><span>$$= R(s, a)+\gamma \sum_{s'\in s}P(s'|s) \sum_{a'\in A}\pi (a'|s')q^{\pi}(s', a')$$</span></p>
+<div id="gtx-trans" style="position: absolute; left: 237px; top: 419.729px;">
+<div class="gtx-trans-icon"></div>
+</div><br />Markov << <a href='Markov.html'>Previous</a> <a href='優化器.html'>Next</a> >> 優化器</div>
         
     <!-- footer -->
       <div class="container">
