--- a/config/content.htm
+++ b/config/content.htm
@@ -939,13 +939,14 @@ print (result)
 <h4><span>sigmoid </span></h4>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">def sigmoid(x): 
     return 1.0 / (1.0 + np.exp(-x))</pre>
-<p><img alt="" height="70" src="/images/Sigmoid_Function.png" width="165"/></p>
+<p>$$\sigma(x) = \frac{1}{1+e^{-x}}$$</p>
 <h4>softmax</h4>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">def softmax(x):
     probs = np.exp(x - np.max(x, axis=1, keepdims=True))
     probs /= np.sum(probs, axis=1, keepdims=True)
     return probs</pre>
-<p><img alt="" height="100" src="/images/Softmax Formula.png" width="285"/>[來源：<a href="https://deepai.org/machine-learning-glossary-and-terms/softmax-layer">softmax</a>資料]</p>
+<p>$$\sigma(\overrightarrow{z})_i = \frac{e^{z_i}}{\sum^K_{j=1}e^{z_j}}$$</p>
+<p style="text-align: right;">[來源：<a href="https://deepai.org/machine-learning-glossary-and-terms/softmax-layer">softmax</a>資料]</p>
 <h4>prepro</h4>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">def prepro(I):
     """ prepro 210x160x3 uint8 frame into 6400 (80x80) 1D float vector """
@@ -1099,7 +1100,10 @@ print (result)
         else:
             outstring = '!!!!!!!'
         
-        print ('ep '+ str(episode_number) + ': game finished, reward:' +str(reward)+ outstring )</pre><h2>Markov</h2>
+        print ('ep '+ str(episode_number) + ': game finished, reward:' +str(reward)+ outstring )</pre>
+<h4>訓練結果</h4>
+<p>紅點是每局的獎勵總和，藍色是累積獎勵平均值。橫軸：訓練局數；縱軸獎勵分數。</p>
+<p><img caption="false" height="500" src="/images/pong2_41k.png" width="667"/></p><h2>Markov</h2>
 <h4>Markov Chain</h4>
 <p>當前決策只會影響下個狀態，當前狀態轉移(action)到其他狀態的機率有所差異。</p>
 <h4>Markov Reward Process</h4>
@@ -1159,9 +1163,15 @@ print (result)
 <td colspan="3" style="width: 467.333px; text-align: center; height: 43px;">$P^{\pi}(s) = \sum_{a\in A}\pi (a|s)P(s, a)$</td>
 </tr>
 <tr style="height: 98.7292px;">
-<td style="width: 202.667px; text-align: center; height: 98.7292px;"><img caption="false" height="150" src="/images/MRP.jpg" width="251"/></td>
+<td style="width: 202.667px; text-align: center; height: 98.7292px;">
+<p><img caption="false" height="150" src="/images/MRP.jpg" width="251"/></p>
+<p>圖1.MRP</p>
+</td>
 <td style="width: 29.3333px; text-align: center; height: 98.7292px;"></td>
-<td style="width: 223.333px; text-align: center; height: 98.7292px;"><img alt="" height="150" src="/images/MDP.jpg" width="218"/></td>
+<td style="width: 223.333px; text-align: center; height: 98.7292px;">
+<p><img alt="" height="150" src="/images/MDP.jpg" width="218"/></p>
+<p>圖2.MDP</p>
+</td>
 </tr>
 </tbody>
 </table>
@@ -1170,15 +1180,16 @@ print (result)
 <p>$$= \mathbb{E}[R_{t+1}+\gamma v^{\pi}(s_{t+1})|s_t=s]$$</p>
 <p>$$= \sum_{a\in A}\pi (a|s)q^{\pi}(s, a)$$</p>
 <p style="text-align: center;"><img alt="" height="200" src="/images/s_to _s.jpg" width="315"/></p>
+<p style="text-align: center;">圖3.Backup Diagram for $V^{\pi}$</p>
 <p style="text-align: left;"><span>$$v^{\pi}(s) = \sum_{a\in A}\pi (a|s)(R(s, a)+\gamma \sum_{s'\in s}P(s'|s, a)v^{\pi}(s'))$$</span></p>
 <h4>action value function(行為方程式)$q^{\pi}(s, a)$</h4>
 <p>$$q^{\pi}(s, a) = \mathbb{E}[G_t|s_t=s, A_t=a]$$</p>
 <p>$$= \mathbb{E}[R_{t+1}+\gamma q^{\pi}(s_{t+1}, A_{t+1})|s_t=s, A_t=a]$$</p>
 <p>$$= R^a_s+\gamma \sum_{s'\in s}P(s'|s)v^{\pi}(s')$$</p>
 <p><span>$$= R(s, a)+\gamma \sum_{s'\in s}P(s'|s) \sum_{a'\in A}\pi (a'|s')q^{\pi}(s', a')$$</span></p>
-<div id="gtx-trans" style="position: absolute; left: 237px; top: 419.729px;">
-<div class="gtx-trans-icon"></div>
-</div><h1>優化器</h1>
+<p style="text-align: center;"><span><img alt="" height="200" src="/images/Q_pi function.jpg" width="291"/></span></p>
+<p style="text-align: center;"><span>圖4.Backup Diagram For $Q^{\pi}$</span></p>
+<p><span>$$q^\pi(s, a)=R(s, a)+\gamma\sum_{s'\in S}P(s'|s, a)\sum_{a'\in A}\pi(a'|s')q^{\pi}(s', a')$$</span></p><h1>優化器</h1>
 <p>為了讓AI學習的錯誤率降低，因此利用優化器來降低loss function的值，在error surface上找到最小值，即是找到錯誤率最低的地方。以下將介紹幾種優化的方法：</p>
 <h4>Gradient Descent</h4>
 <p>利用梯度的方式尋找最小值的位置，其特色可找到凸面error surface的絕對最小值，在非凸面error surface上找到相對最小值。其缺點是在非凸面error surface要避免被困在次優的局部最小值。</p>
