--- a/content/Markov Decision Process.html
+++ b/content/Markov Decision Process.html
@@ -160,9 +160,15 @@ img.add_border {
 <td colspan="3" style="width: 467.333px; text-align: center; height: 43px;">$P^{\pi}(s) = \sum_{a\in A}\pi (a|s)P(s, a)$</td>
 </tr>
 <tr style="height: 98.7292px;">
-<td style="width: 202.667px; text-align: center; height: 98.7292px;"><img caption="false" height="150" src="./../images/MRP.jpg" width="251"/></td>
+<td style="width: 202.667px; text-align: center; height: 98.7292px;">
+<p><img caption="false" height="150" src="./../images/MRP.jpg" width="251"/></p>
+<p>圖1.MRP</p>
+</td>
 <td style="width: 29.3333px; text-align: center; height: 98.7292px;"></td>
-<td style="width: 223.333px; text-align: center; height: 98.7292px;"><img alt="" height="150" src="./../images/MDP.jpg" width="218"/></td>
+<td style="width: 223.333px; text-align: center; height: 98.7292px;">
+<p><img alt="" height="150" src="./../images/MDP.jpg" width="218"/></p>
+<p>圖2.MDP</p>
+</td>
 </tr>
 </tbody>
 </table>
@@ -171,15 +177,16 @@ img.add_border {
 <p>$$= \mathbb{E}[R_{t+1}+\gamma v^{\pi}(s_{t+1})|s_t=s]$$</p>
 <p>$$= \sum_{a\in A}\pi (a|s)q^{\pi}(s, a)$$</p>
 <p style="text-align: center;"><img alt="" height="200" src="./../images/s_to _s.jpg" width="315"/></p>
+<p style="text-align: center;">圖3.Backup Diagram for $V^{\pi}$</p>
 <p style="text-align: left;"><span>$$v^{\pi}(s) = \sum_{a\in A}\pi (a|s)(R(s, a)+\gamma \sum_{s'\in s}P(s'|s, a)v^{\pi}(s'))$$</span></p>
 <h4>action value function(行為方程式)$q^{\pi}(s, a)$</h4>
 <p>$$q^{\pi}(s, a) = \mathbb{E}[G_t|s_t=s, A_t=a]$$</p>
 <p>$$= \mathbb{E}[R_{t+1}+\gamma q^{\pi}(s_{t+1}, A_{t+1})|s_t=s, A_t=a]$$</p>
 <p>$$= R^a_s+\gamma \sum_{s'\in s}P(s'|s)v^{\pi}(s')$$</p>
 <p><span>$$= R(s, a)+\gamma \sum_{s'\in s}P(s'|s) \sum_{a'\in A}\pi (a'|s')q^{\pi}(s', a')$$</span></p>
-<div id="gtx-trans" style="position: absolute; left: 237px; top: 419.729px;">
-<div class="gtx-trans-icon"></div>
-</div><br />Markov << <a href='Markov.html'>Previous</a> <a href='優化器.html'>Next</a> >> 優化器</div>
+<p style="text-align: center;"><span><img alt="" height="200" src="./../images/Q_pi function.jpg" width="291"/></span></p>
+<p style="text-align: center;"><span>圖4.Backup Diagram For $Q^{\pi}$</span></p>
+<p><span>$$q^\pi(s, a)=R(s, a)+\gamma\sum_{s'\in S}P(s'|s, a)\sum_{a'\in A}\pi(a'|s')q^{\pi}(s', a')$$</span></p><br />Markov << <a href='Markov.html'>Previous</a> <a href='優化器.html'>Next</a> >> 優化器</div>
         
     <!-- footer -->
       <div class="container">
